<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
 <group>
    <item
        android:id="@+id/sostav"
        android:orderInCategory="1"
        android:title="@string/item_sost"
        android:showAsAction="never" />
    <item
        android:id="@+id/opisanie"
        android:orderInCategory="2"
        android:title="@string/item_opisanie"
        android:showAsAction="never" />
    <item
        android:id="@+id/ruk"
        android:orderInCategory="3"
        android:title="@string/item_ruk"
        android:showAsAction="never" />
     <item
        android:id="@+id/organiz"
        android:orderInCategory="3"
        android:title="@string/item_org"
        android:showAsAction="never" />
     <item
        android:id="@+id/zashita"
        android:orderInCategory="3"
        android:title="@string/item_zash"
        android:showAsAction="never" />
     <item
        android:id="@+id/vivod"
        android:orderInCategory="3"
        android:title="@string/item_viv"
        android:showAsAction="never" />
     <item
         android:id="@+id/report"
         android:orderInCategory="3"
         android:title="@string/item_report"
         android:showAsAction="never" />
     <item
         android:id="@+id/download"
         android:orderInCategory="3"
         android:title="@string/item_downl"
         android:showAsAction="never" />
     <item
         android:id="@+id/save"
         android:orderInCategory="3"
         android:title="@string/item_save"
         android:showAsAction="never" />
     <item
         android:id="@+id/exit"
         android:orderInCategory="3"
         android:title="@string/item_exit"
         android:showAsAction="never" />
 </group>
</menu>